--- a/Strings/AppResources.zh.resx
+++ b/Strings/AppResources.zh.resx
@@ -3233,6 +3233,34 @@ PLAYER</comment>
     <value>你有未完成的飞行，要覆盖它吗？</value>
     <comment>Overwrite currently saved flight?</comment>
   </data>
+  <data name="Global.Cancelled" xml:space="preserve">
+    <value>无法恢复</value>
+    <comment>CANCELLED</comment>
+  </data>
+  <data name="Global.InFlight" xml:space="preserve">
+    <value>飞行中</value>
+    <comment>IN FLIGHT</comment>
+  </data>
+  <data name="Global.OnGround" xml:space="preserve">
+    <value>在地面上</value>
+    <comment>ON GROUND</comment>
+  </data>
+  <data name="Global.Parked" xml:space="preserve">
+    <value>在停机位</value>
+    <comment>PARKED</comment>
+  </data>
+  <data name="Global.ResumeLastFlight" xml:space="preserve">
+    <value>恢复上次飞行</value>
+    <comment>RESUME LAST FLIGHT</comment>
+  </data>
+  <data name="Global.Stopped" xml:space="preserve">
+    <value>已暂停</value>
+    <comment>STOPPED</comment>
+  </data>
+  <data name="Global.Taxiing" xml:space="preserve">
+    <value>滑行中</value>
+    <comment>TAXIING</comment>
+  </data>
 <data name="LeaderboardsControl.WeeklyLeaderboardUpper" xml:space="preserve">
     <value>每周排行榜</value>
     <comment>WEEKLY LEADERBOARD</comment>
